<?xml version="1.0" encoding="utf-8"?>
<!--
 # $Id: $
 #
 # Copyright (C) 2012 Stoyan Rachev (stoyanr@gmail.com)
 #
 # This program is free software; you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by the
 # Free Software Foundation; either version 2, or (at your option) any
 # later version.
 #
 # This program is distributed in the hope that it will be useful, but
 # WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 # General Public License for more details.
 -->
<resources>
    <string name="app_name">Feeder</string>
    <string name="error">Error</string>
    <string name="reading_feed">Reading feed</string>
    <string name="please_wait">Please wait</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="refresh_all">Refresh All</string>
    <string name="clean">Clean</string>
    <string name="view_featured">Featured</string>
    <string name="next_channel">Next</string>
    <string name="previous_channel">Previous</string>
    <string name="newer_item">Newer</string>
    <string name="older_item">Older</string>
    <string name="read_more">Read more...</string>
    <string name="feed_url">Feed URL:</string>
    <string name="http">http://</string>
    <color name="image_background">#888888</color>
    <color name="title_background">#CC000000</color>
</resources>
