<?xml version="1.0" encoding="utf-8"?>
<!--
 # $Id: $
 #
 # Copyright (C) 2012 Stoyan Rachev (stoyanr@gmail.com)
 #
 # This program is free software; you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by the
 # Free Software Foundation; either version 2, or (at your option) any
 # later version.
 #
 # This program is distributed in the hope that it will be useful, but
 # WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 # General Public License for more details.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/subscribe"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/subscribe"/>

    <group android:id="@+id/group_channels" >
        <item
            android:id="@+id/refresh_all"
            android:icon="@drawable/ic_menu_refresh"
            android:title="@string/refresh_all"/>
        <item
            android:id="@+id/clean"
            android:icon="@drawable/ic_menu_clear_playlist"
            android:title="@string/clean"/>
    </group>

    <item
        android:id="@+id/settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings"/>

</menu>